[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2"] }
config = "0.14.0"
entity = { path = "entity" }
migration = { path = "migration" }
once_cell = "1.19.0"
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.7.0", features = ["v4"] }
validator = "0.16.1"

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
proptest = "1.4.0"
reqwest = "0.11.24"

[profile.release]
strip = "symbols"
